apps/surrealdb/base/tailnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: surrealdb-tailnet
  annotations:
    tailscale.com/proxy-group: ingress-proxies
    tailscale.com/tags: tag:shared-surrealdb
spec:
  defaultBackend:
    service:
      name: surrealdb
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - surrealdb
